--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div class="ygoCont blue">
 				<div class="front">
 					<img class="img-fluid card"
-						src="http://images.wikia.com/yugioh/images/archive/e/e5/20100726082131!Back-EN.png"
+						src="images/backofcard.webp"
 						alt="Back of Yu-Gi-Oh! Trading Card. Copyright 1996 Kazuki Takahashi.">
 				</div>
 				<div class="back">
@@ -56,7 +56,7 @@
 			<div class="ygoCont" id="purple">
 				<div class="front">
 					<img class="img-fluid card"
-						src="http://images.wikia.com/yugioh/images/archive/e/e5/20100726082131!Back-EN.png"
+						src="images/backofcard.webp"
 						alt="Back of Yu-Gi-Oh! Trading Card. Copyright 1996 Kazuki Takahashi.">
 				</div>
 				<div class="back">
@@ -72,7 +72,7 @@
 			<div class="ygoCont" id="red">
 				<div class="front">
 					<img class="img-fluid card"
-						src="http://images.wikia.com/yugioh/images/archive/e/e5/20100726082131!Back-EN.png"
+						src="images/backofcard.webp"
 						alt="Back of Yu-Gi-Oh! Trading Card. Copyright 1996 Kazuki Takahashi.">
 				</div>
 				<div class="back">
