--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="This app helps youtubers pick the best background color for their videos">
-	<meta name="keywords" content="youtube, background, lights">
+	<meta name="description" content="Who's your deck leader: Blue-Eyes White Dragon, Dark Magician, or Red-Eyes Black Dragon?">
+	<meta name="keywords" content="Yu-Gi-Oh!, deck leader">
 	<meta name="author" content="Gemini Powell">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
